flapivor/tests/m1/hopix/parser/bad/116-for-1.hopix
val main =
  for i = 0 downto 10 { nothing () }